--- a/index.html
+++ b/index.html
@@ -142,6 +142,8 @@ span {
     .card .image {
         width: auto;
         height: 33%;
+        background: linear-gradient(hsla(277, 64%, 61%, 0.5) 0%, hsla(277, 64%, 61%, 0.5) 100%), url(images/image-header-mobile.jpg);
+        background-size: cover;
         border-radius: 7px 7px 0 0;
     }
 }
