--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ span {
 
 .card .image {
     width: 50%;
-    background: linear-gradient(hsla(277, 64%, 61%, 0.5) 0%, hsla(277, 64%, 61%, 0.5) 100%), url(images/image-header-desktop.jpg);
+    background: linear-gradient(hsla(277, 64%, 61%, 0.5) 0%, hsla(277, 64%, 61%, 0.5) 100%), url(image-header-desktop.jpg);
     background-size: cover;
     border-top-right-radius: 7px;
     border-bottom-right-radius: 7px;
@@ -142,7 +142,7 @@ span {
     .card .image {
         width: auto;
         height: 33%;
-        background: linear-gradient(hsla(277, 64%, 61%, 0.5) 0%, hsla(277, 64%, 61%, 0.5) 100%), url(images/image-header-mobile.jpg);
+        background: linear-gradient(hsla(277, 64%, 61%, 0.5) 0%, hsla(277, 64%, 61%, 0.5) 100%), url(image-header-mobile.jpg);
         background-size: cover;
         border-radius: 7px 7px 0 0;
     }
