--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ span {
 
 .card .image {
     width: 50%;
-    background: linear-gradient(hsla(277, 64%, 61%, 0.5) 0%, hsla(277, 64%, 61%, 0.5) 100%), url(image-header-desktop.jpg);
+    background: linear-gradient(hsla(277, 64%, 61%, 0.5) 0%, hsla(277, 64%, 61%, 0.5) 100%), url(https://github.com/TayAki79/Stats-preview-card-component/blob/abd5648c1aaa8b73b051ba5d0c7c328eaf66065b/image-header-mobile.jpg);
     background-size: cover;
     border-top-right-radius: 7px;
     border-bottom-right-radius: 7px;
