--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@ span {
     .card .image {
         width: auto;
         height: 33%;
-        background: linear-gradient(hsla(277, 64%, 61%, 0.5) 0%, hsla(277, 64%, 61%, 0.5) 100%), url(image-header-mobile.jpg);
+        background: linear-gradient(hsla(277, 64%, 61%, 0.5) 0%, hsla(277, 64%, 61%, 0.5) 100%), url(https://github.com/TayAki79/Stats-preview-card-component/blob/02746acf6037939d9bb06a33091a8728c3b9d4f7/image-header-mobile.jpg);
         background-size: cover;
         border-radius: 7px 7px 0 0;
     }
